tests/errors/003-typechecking/001-undefined-type/002-in-function-args.xxx
x := (a : float) => { }
y := (a : triple) => { }
z := (a : int) => { }
